@@ -1185,6 +1185,8 @@ upnp.alert.mappinggrabbed=UPnP: Mapping '%1' established - grabbed from '%2'
 upnp.mapping.tcpssltrackerport=TCP SSL Tracker Port
 upnp.alertothermappings=Report ports owned by other computers
 upnp.alertdeviceproblems=Report problems with the UPnP device
+upnp.trace_to_log=Output full debug information to log
+upnp.wiki_link=Azureus Wiki page on UPnP
 blank.resource=
 ConfigView.pluginlist.coreplugins=The following built-in plugins are loaded:
 Peers.column.DLedFromOthers=From Others
